--- a/Swiggy sample website/src/css/Card.css
+++ b/Swiggy sample website/src/css/Card.css
@@ -7,6 +7,10 @@
    
 }
 
+.card :hover{
+    cursor: pointer;
+}
+
 .container{
     display: flex;
 }
@@ -25,3 +29,7 @@
     font-weight: bold;
 }
 
+.card{
+    text-decoration: none;
+    
+}
